Lay groundwork for creating new contacts, refactor api structure, add modal for adding contacts.

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   "expo": {
     "router": {
       "ignoreRoutes": [
-        "types/*"
+        "types/*",
+        "api/*"
       ]
     }
   }
